Removed console.logs and fixed jumping of width while scrolling in Firefox

--- a/develop/modules/item/item.less
+++ b/develop/modules/item/item.less
@@ -28,6 +28,7 @@
         }
    }
    &__title {
+       overflow: hidden;
        padding-left: @itemPadding;
        display: block;
    }
